force-app/main/default/objects/Billing_Group__c.object
<CustomObject>
    <description>The Billing Group represents the record/Number that Members and Plans are tied to in CAPS.</description>
    <fields>
        <fullName>Account__c</fullName>
        <inlineHelpText>A lookup to an Account record of type Prospect or Customer</inlineHelpText>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Groups can only be associated to a Customer or Prospect type Account</errorMessage>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Customer</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Prospect</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Billing Groups</relationshipLabel>
        <relationshipName>Billing_Groups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Agent_Code__c</fullName>
        <inlineHelpText>A legacy value that roughly corresponds to the Customer account, but doesn&apos;t always.  Should be defined by Underwriting.</inlineHelpText>
        <label>Agent Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COBRA_Admin__c</fullName>
        <inlineHelpText>Select the entity that will administer the COBRA products, if applicable.</inlineHelpText>
        <label>COBRA Admin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Group</fullName>
                    <label>Group Sponsored</label>
                </value>
                <value>
                    <fullName>HMSA</fullName>
                    <label>HMSA Administered</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancel_Date__c</fullName>
        <inlineHelpText>The date this Billing Group was canceled in CAPS.</inlineHelpText>
        <label>Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Field to store address city from CAPS</description>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Pull_Date__c</fullName>
        <formula>CASE( Rating_Class__c , 
&apos;January&apos;, &apos;July 10&apos;, 
&apos;February&apos;, &apos;August 10&apos;, 
&apos;March&apos;, &apos;September 10&apos;, 
&apos;April&apos;, &apos;October 10&apos;, 
&apos;May&apos;, &apos;November 10&apos;, 
&apos;June&apos;, &apos;December 10&apos;, 
&apos;July&apos;, &apos;January 10&apos;, 
&apos;August&apos;, &apos;February 10&apos;, 
&apos;September&apos;, &apos;March 10&apos;, 
&apos;October&apos;, &apos;April 10&apos;, 
&apos;November&apos;, &apos;May 10&apos;, 
&apos;December&apos;, &apos;June 10&apos;, 
&apos;&apos;)</formula>
        <inlineHelpText>The date the Experience Period data report should be run.  Based on Rating Class entry.</inlineHelpText>
        <label>Data Pull Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dental_Band__c</fullName>
        <label>Dental Band</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domestic_Partnership_Allowed__c</fullName>
        <inlineHelpText>Select which Domestic Partnership option applies to this Billing Group.</inlineHelpText>
        <label>Domestic Partnership Allowed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes - without Children</fullName>
                </value>
                <value>
                    <fullName>Yes - with Children</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Drug_Band__c</fullName>
        <label>Drug Band</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Count__c</fullName>
        <inlineHelpText>Captures how many employees are in this Group (as opposed to the parent Customer)</inlineHelpText>
        <label>Employee Count</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Experience_Period__c</fullName>
        <formula>CASE( Rating_Class__c , &apos;January&apos;, &apos;July - June&apos;, 
&apos;February&apos;, &apos;August - July&apos;,
&apos;March&apos;, &apos;September - August&apos;,
&apos;April&apos;, &apos;October - September&apos;,
&apos;May&apos;, &apos;November - October&apos;,
&apos;June&apos;, &apos;December - November&apos;,
&apos;July&apos;, &apos;January - December&apos;,
&apos;August&apos;, &apos;February - January&apos;,
&apos;September&apos;, &apos;March - February&apos;,
&apos;October&apos;,  &apos;April - March&apos;,
&apos;November&apos;, &apos;May - April&apos;,
&apos;December&apos;, &apos;June - May&apos;,
&apos;&apos;)</formula>
        <inlineHelpText>Based on the Rating Class entry.</inlineHelpText>
        <label>Experience Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Group_Number__c</fullName>
        <formula>Group_Number__c  &amp;  Group_Sub_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Group Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grandfathered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Grandfathered?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <inlineHelpText>The unique Group Number that will link this record to CAPS data</inlineHelpText>
        <label>Group Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Status__c</fullName>
        <defaultValue>&apos;Pending&apos;</defaultValue>
        <inlineHelpText>This shows the status of the Group from CAPS data.</inlineHelpText>
        <label>Group Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Sub_Number__c</fullName>
        <defaultValue>&apos;001&apos;</defaultValue>
        <inlineHelpText>The last 3, zero-filled, digits of the larger, full Group Number.</inlineHelpText>
        <label>Group Sub Number</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Med_Band__c</fullName>
        <label>Med Band</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Count__c</fullName>
        <inlineHelpText>Stores how many Subscribers plus their dependents have chosen the Plan offered to this Group.</inlineHelpText>
        <label>Member Count</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Effective_Date__c</fullName>
        <inlineHelpText>Stores the date the very first Plan offered to the Group became active.</inlineHelpText>
        <label>Original Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rating_Class__c</fullName>
        <inlineHelpText>Select the month that renewal rating should be initiated.  Affects the Experience Period, Data Pull Date and Delivered to SAM Date.</inlineHelpText>
        <label>Rating Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Months</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Month__c</fullName>
        <formula>TEXT ( MONTH (  Renewal_Date__c  )) &amp; &quot;/&quot; &amp; TEXT (YEAR ( Renewal_Date__c ))</formula>
        <inlineHelpText>Shows the Month / Year based on the Renewal Date</inlineHelpText>
        <label>Renewal Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Rating_to_SAM_By__c</fullName>
        <formula>CASE( Rating_Class__c , 
&apos;January&apos;, &apos;August 31&apos;, 
&apos;February&apos;, &apos;September 30&apos;, 
&apos;March&apos;, &apos;October 31&apos;, 
&apos;April&apos;, &apos;November 30&apos;, 
&apos;May&apos;, &apos;December 31&apos;, 
&apos;June&apos;, &apos;January 31&apos;, 
&apos;July&apos;, &apos;February 28&apos;, 
&apos;August&apos;, &apos;March 31&apos;, 
&apos;September&apos;, &apos;April 30&apos;, 
&apos;October&apos;, &apos;May 31&apos;, 
&apos;November&apos;, &apos;June 30&apos;, 
&apos;December&apos;, &apos;July 31&apos;, 
&apos;&apos;)</formula>
        <inlineHelpText>The date that the renewal rates / proposal should be available to the SAM from Underwriting.</inlineHelpText>
        <label>Renewal Rating to SAM By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Agent_Code__c</fullName>
        <label>Requested Agent Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Billing_Group_Name__c</fullName>
        <label>Requested Billing Group Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_COBRA_Admin__c</fullName>
        <label>Requested COBRA Admin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>COBRA_Admin</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_City__c</fullName>
        <label>Requested City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Employee_Count__c</fullName>
        <label>Requested Employee Count</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requested_Grandfathered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requested Grandfathered?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requested_Rating_Class__c</fullName>
        <label>Requested Rating Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Months</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_State_Province__c</fullName>
        <label>Requested State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Street__c</fullName>
        <label>Requested Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Requested_Zip_Postal_Code__c</fullName>
        <label>Requested Zip/Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retro_Cancellation_Allowance__c</fullName>
        <inlineHelpText>How many days will you credit back a cancellation notice from members of this group?</inlineHelpText>
        <label>Retro Cancellation Allowance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <description>Field to store address state/province from CAPS</description>
        <label>State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>Field to store address street from CAPS</description>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Subscriber_Count__c</fullName>
        <inlineHelpText>Captures how many employees actually selected the plan offered to this Group.</inlineHelpText>
        <label>Subscriber Count</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Auto_Number__c</fullName>
        <description>Used in system processes to set the default value of the selectively editable field.</description>
        <displayFormat>{000000}</displayFormat>
        <label>System Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <description>Field to store address zip/postal code from CAPS</description>
        <label>Zip/Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Billing Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Renewal_Date__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Group_Status__c</columns>
        <columns>Subscriber_Count__c</columns>
        <columns>Member_Count__c</columns>
        <columns>Rating_Class__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Billing_Groups</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Group_Status__c</columns>
        <columns>Subscriber_Count__c</columns>
        <columns>Member_Count__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Billing Groups</label>
    </listViews>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Lock_Group_Number</fullName>
        <active>true</active>
        <description>Don&apos;t allow users to change the Group Number or Group Sub Number fields if there is any status but &quot;Pending&quot; in the Group Status field.</description>
        <errorConditionFormula>$User.Run_Validation__c &amp;&amp;
Group_Status__c &lt;&gt; &apos;Pending&apos; &amp;&amp;
(ISCHANGED ( Group_Number__c ) ||
ISCHANGED (  Group_Sub_Number__c ))</errorConditionFormula>
        <errorMessage>You cannot change Group Number or Group Sub Number unless the Group Status is &quot;Pending.&quot;</errorMessage>
    </validationRules>
</CustomObject>