force-app/main/default/objects/Billing_Group__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <inlineHelpText>Stores the date the current Plan offered to the Group became (will become) active.</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>