force-app/main/default/objects/Billing_Group__c/fields/Is_COBRA__c.field-meta.xml
<CustomField>
    <fullName>Is_COBRA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is COBRA?</label>
    <type>Checkbox</type>
</CustomField>