force-app/main/default/objects/Billing_Group__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Renewal_Date__c</columns>
    <columns>Group_Number__c</columns>
    <columns>Group_Status__c</columns>
    <columns>Subscriber_Count__c</columns>
    <columns>Member_Count__c</columns>
    <columns>Rating_Class__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>