force-app/main/default/objects/Billing_Group__c/listViews/My_Upcoming_Renewals.listView-meta.xml
<ListView>
    <fullName>My_Upcoming_Renewals</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Group_Number__c</columns>
    <columns>Group_Status__c</columns>
    <columns>Subscriber_Count__c</columns>
    <columns>Member_Count__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Upcoming Renewals</label>
</ListView>